--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -17,7 +17,7 @@ tags:
 <section class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 fade-in">
         <div class="content editable">
           <p class="lead">Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any
             kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since
@@ -49,28 +49,28 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content slide-right">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-01.jpg)"></div>
         </div>
-        <div class="content">
+        <div class="content slide-left">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-02.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row align-items-center">
-      <div class="col-md-6">
+      <div class="col-md-6 slide-right">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-03.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 slide-left">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-04.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 slide-up">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-05.jpg)"></div>
         </div>
