--- a/src/contact.html
+++ b/src/contact.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 testimonial: true
 ---
-<section id="page-intro">
+<section id="page-intro" class="fade-in">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -63,21 +63,21 @@ testimonial: true
       <div class="col">
         <div class="content">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 slide-right">
               <div class="bg-image aspect-4x3 mt-4" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 slide-left">
               <div class="bg-image aspect-4x3 mt-4" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 slide-right">
               <div class="bg-image aspect-1x1 mt-4" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 slide-up">
               <div class="bg-image aspect-1x1 mt-4" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 slide-left">
               <div class="bg-image aspect-1x1 mt-4" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
             </div>
           </div>
