--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@ mosaic:
 
 ---
 
-<section id="page-intro" class="slide-up">
+<section id="page-intro" class="fade-in">
   <div class="container">
     <div class="row ">
       <div class="col-12">
@@ -84,8 +84,8 @@ mosaic:
 <section class="bg-dark text-white">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-6">
-        <div class="content slide-up editable">
+      <div class="col-md-6 slide-up">
+        <div class="content editable">
           <p class="quote">
             “If you guys are such hot shit, who have you worked with? Anything I have ever seen?”
           </p>
