--- a/src/work.html
+++ b/src/work.html
@@ -7,7 +7,7 @@ testimonial:
   author: Alyssa Fox
   title: Founder, Fox Tax Service
 ---
-<section id="page-intro">
+<section id="page-intro" class="fade-in">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -29,7 +29,7 @@ testimonial:
     {% for object in site.data.project_order.projects %}
     {% assign project =  site.projects | where: "slug", object | first %}
     {% if project.status == "active" %}
-    <div class="mix position-relative col-lg-6 {% for tag in project.tags %} {{ tag }}{% endfor %}">
+    <div class="mix position-relative col-lg-6 {% cycle 'slide-right', 'slide-left' %} {% for tag in project.tags %} {{ tag }}{% endfor %}">
       <a href="{{ project.url }}" class="expand-full-screen" data-transition="ProjectTransition" data-image="{{ project.featured_image }}">
         <div class="bg-image aspect-16x9" style="background-image: url({{ project.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
         <div class="hover-overlay">
