--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -13,7 +13,7 @@ tags:
   - illustration
 ---
 
-<section class="pt-0">
+<section class="pt-0 fade-in">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -30,7 +30,7 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-10 mx-md-auto">
+      <div class="col-12 col-md-10 mx-md-auto fade-in">
         <div class="content">
           <p class="text-large mb-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat molestiae magnam esse officia voluptas
@@ -45,57 +45,57 @@ tags:
 <section class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 slide-down">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-01.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 slide-right">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-03.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 slide-left">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-07.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 slide-up">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-02.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 slide-right">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-04.jpg')"></div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 slide-left">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-06.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 slide-up">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-05.jpg')"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 slide-right">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-09.svg')"></div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 slide-left">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url('/assets/img/projects/kunoa/kunoa-work-08.svg')"></div>
         </div>
