--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -34,7 +34,7 @@ tags:
 <section>
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-12 col-lg-10 mx-lg-auto">
+      <div class="col-12 col-lg-10 mx-lg-auto fade-in">
         <div class="content">
           <p class="text-large mb-0">Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the individual elements of the original ID if at all possible. The dropper and cube of bitters nearly
             phonetically spelled out the brand name and always kept the hand-cra ed feel front and center. With Bittercube’s passion
