--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -20,7 +20,7 @@ tags:
 <section class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 fade-in">
         <div class="content">
           <p class="lead">
             ‘Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and
@@ -35,21 +35,21 @@ tags:
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 fade-in">
         <div class="content">
           <h4>Products</h4>
           <p>Everything from learning-focused boards, boots, and bindings to helmets, kids gear, and industry-changing
             step-on bindings.</p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 fade-in">
         <div class="content">
           <h4>Programs</h4>
           <p>Rider-designed instructor courses, teen camps, women’s camps, the industry’s best product demos and resort
             rental offerings.</p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 fade-in">
         <div class="content">
           <h4>Places</h4>
           <p>Toddler-sized Riglet parts, Burton Learn To Ride beginner to advanced terrain parks, branded natural
@@ -64,7 +64,7 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-10 mx-lg-auto">
+      <div class="col-12 col-lg-10 mx-lg-auto fade-in">
         <div class="content">
           <p class="text-large mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta quod consequatur
             tempore hic, obcaecati totam repellendus laudantium eius soluta quidem exercitationem quibusdam? Quis
@@ -78,24 +78,24 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content slide-right">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-02.jpg)"></div>
         </div>
-        <div class="content">
+        <div class="content slide-left">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-04.jpg)"></div>
         </div>
-        <div class="content">
+        <div class="content slide-right">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-06.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 slide-right">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 slide-left">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
         </div>
