--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -22,7 +22,7 @@ tags:
 <section class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 fade-in">
         <div class="content">
           <p class="lead">FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related elds. Every
             year FIRST holds a tournament comprising of four different competitions. Each competition presents a new
@@ -40,7 +40,7 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-10 mx-lg-auto">
+      <div class="col-12 col-lg-10 mx-lg-auto fade-in">
         <div class="content">
           <p class="text-large mb-0">All four competitions would need identities that were distinctly different from one another
             but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to
@@ -59,21 +59,21 @@ tags:
           <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="600" frameborder="0"
             webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
-        <div class="content">
+        <div class="content slide-right">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-work-01.jpg)"></div>
         </div>
-        <div class="content">
+        <div class="content slide-left">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-10.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 slide-right">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-09.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 slide-left">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-08.jpg)"></div>
         </div>
@@ -81,28 +81,28 @@ tags:
     </div>
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content slide-right">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-work-02.jpg)"></div>
         </div>
-        <div class="content">
+        <div class="content slide-left">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-04.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 slide-right">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-05.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 slide-left">
         <div class="content pl-md-1">
           <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-03.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 slide-up">
         <div class="content">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-06-video.jpg)"></div>
         </div>
@@ -145,8 +145,6 @@ tags:
             <i class="arrow arrow-right"></i>
             <span class="sr-only">Next</span>
           </a>
-
-          
         </div>
       </div>
     </div>
