--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -16,7 +16,7 @@ tags:
   - design
 ---
 
-<section class="pt-0">
+<section class="pt-0 fade-in">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -33,7 +33,7 @@ tags:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-10 mx-md-auto">
+      <div class="col-12 col-md-10 mx-md-auto fade-in">
         <div class="content">
           <p class="text-large mb-0">
             Inspired by simple building blocks, Ocupop designed an extensible aesthetic that reinforces collaborative
@@ -50,30 +50,30 @@ tags:
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content slide-right">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-01.jpg)"></div>
         </div>
-        <div class="content">
+        <div class="content slide-left">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-02.jpg)"></div>
         </div>
-        <div class="content">
+        <div class="content slide-right">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-05.jpg)"></div>
         </div>
-        <div class="content">
+        <div class="content slide-left">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-08.jpg)"></div>
         </div>
-        <div class="content">
+        <div class="content slide-up">
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/gdd-project/google-work-03.jpg)"></div>
         </div>
       </div>
     </div>
     <div class="row mt-3">
-      <div class="col-md-6">
+      <div class="col-md-6 slide-right">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-07.jpg)"></div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 slide-left">
         <div class="content pr-md-1">
           <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-06.jpg)"></div>
         </div>
