--- a/src/contact.html
+++ b/src/contact.html
@@ -32,7 +32,7 @@ testimonial: true
       <div class="bg-image aspect-5x7" style="background-image:url({{ site.placeholders.aspect-1x1 }})"></div>
     </div>
     <div class="col-lg-6 bg-dark text-white pt-5">
-      <div class="content">
+      <div class="content slide-left">
         <h3>Make Us Laugh</h3>
         <p>Ocupop is perpetually pushing the limits of technology, testing and tweaking at the leading edge of what's
           possible in a browser. This is Joke Station 3000 Webform&reg; feeds an artificially intelligent system
@@ -40,7 +40,7 @@ testimonial: true
           laugh&mdash; he love puns.</p>
         <a href="#" class="btn btn-outline-light">Tell a Joke</a>
       </div>
-      <div class="content">
+      <div class="content slide-left">
         <h3>Make your Friends Laugh</h3>
         <p>Friends don't find you funny enough? We're here to help. Share on of Ocupop's quality assured jokes to your social
           feed and watch how popular you get.</p>
