new favicon and touchicons, fix for scroll trigger issue when using page transitions, attempt fix for parallax effect when using page transitions

--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -59,7 +59,8 @@ tags:
     </div>
   </div>
 </section>
-<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/burtonltr-project/burtonltr-hero.jpg"
+<div class="mirror-container"></div>
+<div class="parallax-window" data-image-src="/assets/img/projects/burtonltr-project/burtonltr-hero.jpg"
   data-speed="0.8"></div>
 <section>
   <div class="container">
