--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -19,7 +19,7 @@ tags:
 - web
 ---
 
-<section class="pt-0">
+<section class="pt-0 bg-white">
   <div class="container">
     <div class="row">
       <div class="col-12 fade-in">
@@ -35,8 +35,11 @@ tags:
     </div>
   </div>
 </section>
-<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/first-launch-project/first-work-parallax.jpg"
-  data-speed="0.8"></div>
+<div class="parallax-window">
+  <div class="parallax-slider">
+    <img src="/assets/img/projects/first-launch-project/first-work-parallax.jpg" alt="">
+  </div>
+</div>
 <section>
   <div class="container">
     <div class="row">
