--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -28,7 +28,8 @@ tags:
     </div>
   </div>
 </section>
-<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/gdd-project/google-work-parallax.jpg"
+<div class="mirror-container"></div>
+<div class="parallax-window" data-image-src="/assets/img/projects/gdd-project/google-work-parallax.jpg"
   data-speed="0.8"></div>
 <section>
   <div class="container">
