--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -32,7 +32,8 @@ tags:
     </div>
   </div>
 </section>
-<div class="parallax-window" data-parallax="scroll" data-image-src="{{ site.placeholders.hero }}"
+<div class="mirror-container"></div>
+<div class="parallax-window" data-image-src="{{ site.placeholders.hero }}"
   data-speed="0.8"></div>
 <section>
   <div class="container">
