--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -26,7 +26,8 @@ tags:
     </div>
   </div>
 </section>
-<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/kunoa/kunoa-work-parallax.png" data-speed="0.8"></div>
+<div class="mirror-container"></div>
+<div class="parallax-window" data-image-src="/assets/img/projects/kunoa/kunoa-work-parallax.png" data-speed="0.8"></div>
 <section>
   <div class="container">
     <div class="row">
