--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -33,7 +33,8 @@ tags:
     </div>
   </div>
 </section>
-<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/mapbox-locate/locate-work-parallax.png"
+<div class="mirror-container"></div>
+<div class="parallax-window" data-image-src="/assets/img/projects/mapbox-locate/locate-work-parallax.png"
   data-speed="0.8"></div>
 <section>
   <div class="container">
