--- a/src/about.html
+++ b/src/about.html
@@ -4,7 +4,7 @@ title: About
 testimonial: true
 ---
 
-<section id="page-intro" class="bg-light fade-in">
+<section id="page-intro" class="fade-in">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -25,13 +25,13 @@ testimonial: true
     </div>
   </div>
 </section>
-<!-- <div class="row no-gutters">
+<div class="row no-gutters fade-in">
   <div class="col-12">
     <div class="bg-image aspect-4x3" style="background-image: url('/uploads/ocupop-about-fucknoshityeah.jpg')"></div>
   </div>
-</div> -->
-<div class="parallax-window" data-parallax="scroll" data-image-src="/uploads/ocupop-about-fucknoshityeah.jpg"
-  data-speed="0.8"></div>
+</div>
+<!-- <div class="parallax-window" data-parallax="scroll" data-image-src="/uploads/ocupop-about-fucknoshityeah.jpg"
+  data-speed="0.8"></div> -->
 <section class="bg-dark text-white">
   <div class="container">
     <div class="row">
