--- a/src/contact.html
+++ b/src/contact.html
@@ -28,8 +28,8 @@ testimonial: true
 
 <section id="joke-station" class="py-0">
   <div class="row no-gutters">
-    <div class="col-lg-6 bg-dark d-flex justify-content-end align-items-center">
-      <div class="bg-image aspect-5x7" style="background-image:url({{ site.placeholders.aspect-1x1 }})"></div>
+    <div class="col-lg-6 bg-primary d-flex justify-content-end align-items-center p-5">
+      <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/meme.jpg)"></div>
     </div>
     <div class="col-lg-6 bg-dark text-white pt-5">
       <div class="content slide-left">
