updated for data

--- a/src/forms/project-review.html
+++ b/src/forms/project-review.html
@@ -11,11 +11,23 @@ permalink: /project-review
           <div class="cognito">
             <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
             <script>
+              // Tom - lead & dev
+              // Jon - dev
+              // Jeff - dev
+              // Jason - lead & design
+              // Nate - design
+              // Chris - design(he did wireframes)
+              // Abby - lead(research and discovery, content outline)
+              // start date: Aug 1
+              // end date: Dec 21
+              // or Abby could be strategy ?
               Cognito.load("forms", {
                 id: "33",
                 entry: {
-                  "Client": "Test Client",
-                  "Project": "Branding & Identity",
+                  "Client": "Fox Tax Service",
+                  "Project": "Website Refresh",
+                  "StartDate": "2018-08-01",
+                  "EndDate": "2018-12-21",
                   "Reviewer": {
                     "Name": {
                       "First": "Michael",
@@ -23,52 +35,65 @@ permalink: /project-review
                     },
                     "Email": "m@ocupop.com"
                   },
-                  "Operations": [
+                  "Operators": [
                     {
                       "Name": {
                         "First": "Jason",
                         "Last": "Reimer"
                       },
                       "Role": {
-                        "Title":"Project Lead",
-                        "Description":"It is the responsbility of the project lead to..."
+                        "Title": "Project Lead",
+                        "Description": "It is the responsbility of the creative lead to accurately and efficiently communicate messaging and design considerations both internally and with the client."
                       },
                       "Email": "jason@ocupop.com"
                     },
                     {
                       "Name": {
-                        "First": "Claire",
-                        "Last": "LaFontaine"
+                        "First": "Tom",
+                        "Last": "Beck"
                       },
                       "Role": {
-                        "Title": "Project Management",
-                        "Description": "It is the responsbility of the project manager to..."
+                        "Title":"Technical Lead",
+                        "Description":"It is the responsbility of the technical lead to accurately and efficiently communicate technical considerations both internally and with the client."
                       },
-                      "Email": "claire@ocupop.com"
-                    },
+                      "Email": "tom@ocupop.com"
+                    }
                   ],
-                  "Designers": [
-                    {
-                      "Name": {
+                  "Strategists": [
+                      {
+                        "Name": {
                         "First": "Abby",
                         "Last": "Lindstrom"
                       },
                       "Role": {
-                        "Title": "Lead Designer",
-                        "Description": "It is the responsbility of the lead designer to..."
+                        "Title": "UX Strategy",
+                        "Description": ""
                       },
                       "Email": "a@ocupop.com"
-                    },
+                    }
+                  ],
+                  "Designers": [
                     {
                       "Name": {
                         "First": "Nate",
                         "Last": "Fostan"
                       },
                       "Role": {
-                        "Title": "Production Designer",
-                        "Description": "It is the responsbility of the production designer to..."
+                        "Title": "Lead Designer",
+                        "Description": ""
                       },
                       "Email": "nate@ocupop.com"
+                    },
+                    {
+                      "Name": {
+                        "First": "Chris",
+                        "Last": "Walker"
+                      },
+                      "Role": {
+                        "Title": "Wireframe Design",
+                        "Description": ""
+                      },
+                      "Email": "chris@ocupop.com"
                     }
                   ],
                   "Developers": [
@@ -79,7 +104,7 @@ permalink: /project-review
                       },
                       "Role": {
                         "Title": "Lead Developer",
-                        "Description": "It is the responsbility of the lead developer to..."
+                        "Description": ""
                       },
                       "Email": "jon@ocupop.com"
                     }
