--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -76,5 +76,29 @@ tags:
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <div id="carousel-web-showcase" class="carousel slide" data-ride="carousel" data-interval="false">
+            <!-- <ol class="carousel-indicators">
+                  <li data-target="#carousel-web-showcase" data-slide-to="0" class="active"></li>
+                </ol> -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="/assets/img/projects/bittercube-project/bittercube-web-home.jpg" alt="Bittercube Web Image">
+              </div>
+            </div>
+          </div>
+          <!-- <a class="carousel-control-prev" href="#carousel-web-showcase" role="button" data-slide="prev">
+                <i class="arrow arrow-left"></i>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel-web-showcase" role="button" data-slide="next">
+                <i class="arrow arrow-right"></i>
+                <span class="sr-only">Next</span>
+              </a> -->
+        </div>
+      </div>
+    </div>
   </div>
 </section>
