--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -60,8 +60,9 @@ tags:
   </div>
 </section>
 <div class="mirror-container"></div>
-<div class="parallax-window" data-image-src="/assets/img/projects/burtonltr-project/burtonltr-hero.jpg"
-  data-speed="0.8"></div>
+<div class="parallax-window">
+  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-hero.jpg);"></div>
+</div>
 <section>
   <div class="container">
     <div class="row">
