--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -36,9 +36,7 @@ tags:
   </div>
 </section>
 <div class="parallax-window">
-  <div class="parallax-slider">
-    <img src="/assets/img/projects/first-launch-project/first-work-parallax.jpg" alt="">
-  </div>
+  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/first-launch-project/first-work-parallax.jpg);"></div>
 </div>
 <section>
   <div class="container">
