--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -28,9 +28,9 @@ tags:
     </div>
   </div>
 </section>
-<div class="mirror-container"></div>
-<div class="parallax-window" data-image-src="/assets/img/projects/gdd-project/google-work-parallax.jpg"
-  data-speed="0.8"></div>
+<div class="parallax-window">
+  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/google-work-parallax.jpg);"></div>
+</div>
 <section>
   <div class="container">
     <div class="row">
