--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -32,9 +32,9 @@ tags:
     </div>
   </div>
 </section>
-<div class="mirror-container"></div>
-<div class="parallax-window" data-image-src="{{ site.placeholders.hero }}"
-  data-speed="0.8"></div>
+<div class="parallax-window">
+  <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.hero }});"></div>
+</div>
 <section>
   <div class="container">
     <div class="row">
