--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -17,7 +17,7 @@ tags:
 <section class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col-12 fade-in">
+      <div class="col-12">
         <div class="content editable">
           <p class="lead">Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any
             kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since
@@ -30,7 +30,10 @@ tags:
     </div>
   </div>
 </section>
-<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg" data-speed="0.8"></div>
+<div class="parallax-window">
+  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg);"></div>
+</div>
+<!-- <div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg" data-speed="0.8"></div> -->
 <section>
   <div class="container">
     <div class="row align-items-center">
