--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -26,8 +26,9 @@ tags:
     </div>
   </div>
 </section>
-<div class="mirror-container"></div>
-<div class="parallax-window" data-image-src="/assets/img/projects/kunoa/kunoa-work-parallax.png" data-speed="0.8"></div>
+<div class="parallax-window">
+  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-work-parallax.png);"></div>
+</div>
 <section>
   <div class="container">
     <div class="row">
