--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -33,9 +33,9 @@ tags:
     </div>
   </div>
 </section>
-<div class="mirror-container"></div>
-<div class="parallax-window" data-image-src="/assets/img/projects/mapbox-locate/locate-work-parallax.png"
-  data-speed="0.8"></div>
+<div class="parallax-window">
+  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/mapbox-locate/locate-work-parallax.png);"></div>
+</div>
 <section>
   <div class="container">
     <div class="row">
