--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -28,8 +28,9 @@ tags:
     </div>
   </div>
 </section>
-<div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/pbs/pbs-work-parallax.jpg"
-  data-speed="0.8"></div>
+<div class="parallax-window">
+  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/pbs/pbs-work-parallax.jpg);"></div>
+</div>
 <section>
   <div class="container">
     <div class="row">
