--- a/src/forms/project-review.html
+++ b/src/forms/project-review.html
@@ -3,6 +3,7 @@ layout: form
 title: Project Review
 permalink: /project-review
 ---
+
 <section id="page-intro" class="pt-0">
   <div class="container">
     <div class="row">
@@ -11,105 +12,20 @@ permalink: /project-review
           <div class="cognito">
             <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
             <script>
-              // Tom - lead & dev
-              // Jon - dev
-              // Jeff - dev
-              // Jason - lead & design
-              // Nate - design
-              // Chris - design(he did wireframes)
-              // Abby - lead(research and discovery, content outline)
-              // start date: Aug 1
-              // end date: Dec 21
-              // or Abby could be strategy ?
+              function findGetParameter(parameterName) {
+                var result = null,
+                  tmp = [];
+                var items = location.search.substr(1).split("&");
+                for (var index = 0; index < items.length; index++) {
+                  tmp = items[index].split("=");
+                  if (tmp[0] === parameterName) result = decodeURIComponent(tmp[1]);
+                }
+                return result;
+              }
+              const entry = findGetParameter("entry");
               Cognito.load("forms", {
                 id: "33",
-                entry: {
-                  "Client": "Fox Tax Service",
-                  "Project": "Website Refresh",
-                  "StartDate": "2018-08-01",
-                  "EndDate": "2018-12-21",
-                  "Reviewer": {
-                    "Name": {
-                      "First": "Michael",
-                      "Last": "Nieling"
-                    },
-                    "Email": "m@ocupop.com"
-                  },
-                  "Operators": [
-                    {
-                      "Name": {
-                        "First": "Jason",
-                        "Last": "Reimer"
-                      },
-                      "Role": {
-                        "Title": "Project Lead",
-                        "Description": "It is the responsbility of the creative lead to accurately and efficiently communicate messaging and design considerations both internally and with the client."
-                      },
-                      "Email": "jason@ocupop.com"
-                    },
-                    {
-                      "Name": {
-                        "First": "Tom",
-                        "Last": "Beck"
-                      },
-                      "Role": {
-                        "Title":"Technical Lead",
-                        "Description":"It is the responsbility of the technical lead to accurately and efficiently communicate technical considerations both internally and with the client."
-                      },
-                      "Email": "tom@ocupop.com"
-                    }
-                  ],
-                  "Strategists": [
-                      {
-                        "Name": {
-                        "First": "Abby",
-                        "Last": "Lindstrom"
-                      },
-                      "Role": {
-                        "Title": "UX Strategy",
-                        "Description": ""
-                      },
-                      "Email": "a@ocupop.com"
-                    }
-                  ],
-                  "Designers": [
-                    {
-                      "Name": {
-                        "First": "Nate",
-                        "Last": "Fostan"
-                      },
-                      "Role": {
-                        "Title": "Lead Designer",
-                        "Description": ""
-                      },
-                      "Email": "nate@ocupop.com"
-                    },
-                    {
-                      "Name": {
-                        "First": "Chris",
-                        "Last": "Walker"
-                      },
-                      "Role": {
-                        "Title": "Wireframe Design",
-                        "Description": ""
-                      },
-                      "Email": "chris@ocupop.com"
-                    }
-                  ],
-                  "Developers": [
-                    {
-                      "Name": {
-                        "First": "Jon",
-                        "Last": "Burr"
-                      },
-                      "Role": {
-                        "Title": "Lead Developer",
-                        "Description": ""
-                      },
-                      "Email": "jon@ocupop.com"
-                    }
-                  ]
-                }
+                entry: entry
               });
             </script>
           </div>
