--- a/src/forms/testimonials.html
+++ b/src/forms/testimonials.html
@@ -9,7 +9,12 @@ permalink: /testimonials/new
       <div class="col-12">
         <div class="content">
           <h1>Ocupop Testimonial</h1>
-          <p>We appreciate you taking the time to fill out this form...</p>
+          <p>Hello! Thanks for taking a few minutes out of your day to share why you love working with Ocupop. We know, FINALLY, a
+          place for you voice that pent up adulation you've been storing up all these years!</p>
+
+          <p>All joking aside, we sincerely appreciate the support you've provided as clients, collaborators, and friends - and
+          we're humbled that you'd be so gracious as to offer a little peek into what makes working together so magical...and
+          successful.</p>
         </div>
       </div>
     </div>
