--- a/src/forms/testimonials.html
+++ b/src/forms/testimonials.html
@@ -7,7 +7,7 @@ permalink: /testimonials/new
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <div class="content">
+        <div class="content pb-0">
           <h1 class="mt-5">Ocupop Testimonial</h1>
           <p>Hello! Thanks for taking a few minutes out of your day to share why you love working with Ocupop. We know, FINALLY, a
           place for you voice that pent up adulation you've been storing up all these years!</p>
@@ -15,16 +15,10 @@ permalink: /testimonials/new
           <p>All joking aside, we sincerely appreciate the support you've provided as clients, collaborators, and friends - and
           we're humbled that you'd be so gracious as to offer a little peek into what makes working together so magical...and
           successful.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="content">
-            <div class="cognito">
-              <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
-              <script>Cognito.load("forms", { id: "31" });</script>
-            </div>
+          <div class="cognito">
+            <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
+            <script>Cognito.load("forms", { id: "31" });</script>
+          </div>
         </div>
       </div>
     </div>
