--- a/src/forms/testimonials.html
+++ b/src/forms/testimonials.html
@@ -10,9 +10,9 @@ permalink: /testimonials/new
         <div class="content pb-0">
           <h1 class="mt-5">Ocupop Testimonial</h1>
           <p>Hello! Thanks for taking a few minutes out of your day to share why you love working with Ocupop. We know, FINALLY, a
-          place for you voice that pent up adulation you've been storing up all these years!</p>
+          place for you to voice that pent up adulation you've been storing up all these years!</p>
 
-          <p>All joking aside, we sincerely appreciate the support you've provided as clients, collaborators, and friends - and
+          <p>All joking aside, we sincerely appreciate the support you've provided as clients, collaborators, and friends &mdash; and
           we're humbled that you'd be so gracious as to offer a little peek into what makes working together so magical...and
           successful.</p>
           <div class="cognito">
