--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@ mosaic:
 
 ---
 
-<section id="page-intro" class="fade-in">
+<section id="page-intro">
   <div class="container">
     <div class="row ">
       <div class="col-12">
@@ -55,7 +55,7 @@ mosaic:
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <div class="content editable slide-up">
+        <div class="content editable slide-up-1">
           <p class="quote">
             “Not necessarily what I wanted, but exactly what I needed.”
           </p>
@@ -65,7 +65,7 @@ mosaic:
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content editable slide-left">
+        <div class="content editable slide-up-2">
           <p>
             As experts, we’re hired to deliver solutions not options. We’ve
             honed an uncanny ability to be direct yet diplomatic, concise yet
@@ -84,8 +84,8 @@ mosaic:
 <section class="bg-dark text-white">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-6 slide-up">
-        <div class="content editable">
+      <div class="col-md-6">
+        <div class="content editable slide-up-1">
           <p class="quote">
             “If you guys are such hot shit, who have you worked with? Anything I have ever seen?”
           </p>
@@ -95,7 +95,7 @@ mosaic:
         </div>
       </div>
       <div class="col-md-6">
-        <div class="content slide-left editable">
+        <div class="content slide-up-2 editable">
           <p>
             Ocupop has helped to define the visual language of the web and
             beyond since 2000, we’ve led design projects for companies at all
@@ -112,7 +112,7 @@ mosaic:
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <div class="logo-pile slide-left">
+          <div class="logo-pile slide-up-1">
             <div class="logo-item">
               <img src="/assets/img/home/logopile-google.png" alt="Google Logo" class="img-fluid" />
             </div>
@@ -129,7 +129,7 @@ mosaic:
               <img src="/assets/img/home/logopile-facebook.png" alt="Facebook Logo" class="img-fluid" />
             </div>
           </div>
-          <div class="logo-pile slide-right">
+          <div class="logo-pile slide-up-1">
             <div class="logo-item">
               <img src="/assets/img/home/logopile-frontline.png" alt="Frontline Logo" class="img-fluid" />
             </div>
@@ -156,7 +156,7 @@ mosaic:
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-        <div class="content editable slide-up">
+        <div class="content editable slide-up-1">
           <p class="quote">“We are DEZIGNING! Ocupop rulez SUPREME!”</p>
           <p class="quote-author">
             <strong>Jon Burr</strong><br />Ocupop Web Developer, Canadian
@@ -164,7 +164,7 @@ mosaic:
         </div>
       </div>
       <div class="col-lg-6">
-        <div class="content slide-left editable">
+        <div class="content slide-up-2 editable">
           <p>
             Infamous international Vision Quests, dance parties, and spirited
             creative debate, Tom Collinses, skateboard ramps, and world class
@@ -193,21 +193,21 @@ mosaic:
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 slide-right">
+      <div class="col-md-6 slide-up-1">
         <div class="bg-image aspect-4x3 mt-4 mt-md-0" style="background-image: url(/assets/img/home/homepage-culture-01.jpg)"></div>
       </div>
-      <div class="col-md-6 slide-left">
+      <div class="col-md-6 slide-up-2">
         <div class="bg-image aspect-4x3 mt-4 mt-md-0" style="background-image: url(/assets/img/home/homepage-culture-02.jpg)"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 slide-right">
+      <div class="col-md-4 slide-up-1">
         <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/home/homepage-culture-03.jpg)"></div>
       </div>
-      <div class="col-md-4 slide-up">
+      <div class="col-md-4 slide-up-2">
         <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/home/homepage-culture-04.jpg)"></div>
       </div>
-      <div class="col-md-4 slide-left">
+      <div class="col-md-4 slide-up-3">
         <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/home/homepage-culture-05.jpg)"></div>
       </div>
     </div>
